# PasswordManager

./: Dockerfile  README.md  docker-compose.yml  frontend.Dockerfile  pyproject.toml
docker/: .env  nginx.conf
passman/: main.py
passman-frontend/: app.vue  nuxt.config.ts  package-lock.json
passman-frontend/components/: footer.vue  header.vue
passman-frontend/extensions/: useAuthedFetch.ts
passman-frontend/interfaces/: common.interface.ts  password.interface.ts  user.inteface.ts
passman-frontend/middleware/: auth.global.ts
passman-frontend/pages/: index.vue  login.vue  register.vue
passman/api/: auth.py  passwordApi.py  userApi.py
passman/core/: database.py
passman/models/: password.py  user.py
passman/schemas/: password.py  user.py
